--- a/bo.html
+++ b/bo.html
@@ -55,6 +55,49 @@
 </tr>
 </table>
 
+    <br><br>
+<table align="center" width="100%" border="1" cellpadding="10" cellspacing="0">
+<tr>
+<th bgcolor="cyan"> <font size="5"> Lesson 1 </font> </th>
+<th bgcolor="cyan"> <font size="5"> Lesson 2 </font> </th>
+<th bgcolor="cyan"> <font size="5"> Lesson 3 </font> </th>
+<th bgcolor="cyan"> <font size="5"> Lesson 4 </font> </th>
+<th bgcolor="cyan"> <font size="5"> Lesson 5 </font> </th>
+
+</tr>
+<tr>
+<td align="center" width="20%" bgcolor="lightblue">
+<img src="L1.png" alt="lesson 1 bo" width="100%" height="155%"> </a>
+</td>
+<td align="center" width="20%" bgcolor="lightblue">
+<img src="L2.png" alt="lesson 2 bo" width="100%" height="155%"> </a>
+</td>
+<td align="center" width="20%" bgcolor="lightblue">
+<img src="L3.png" alt="Lesson 3 bo" width="65%" height="100%"> </a>
+</td>
+<td align="center" width="20%" bgcolor="lightblue">
+<img src="L4.png" alt="Lesson 4 bo" width="100%" height="155%"> </a>
+</td>
+<td align="center" width="20%" bgcolor="lightblue">
+<img src="L5.png" alt="Lesson 5 bo" width="100%" height="155%"> </a>
+</td>
+
+</tr>
+<tr>
+<th bgcolor="cyan"> <font size="5"> Lesson 6 & 7</font> </th>
+<th bgcolor="cyan"> <font size="5"> Lesson 8 </font> </th>
+
+</tr>
+<tr>
+<td align="center" width="20%" bgcolor="lightblue">
+<img src="L6&7.png" alt="Lesson 6 & 7 bo" width="100%" height="155%"> </a>
+</td>
+<td align="center" width="20%" bgcolor="lightblue">
+<img src="L8.png" alt="lesson 8 bo" width="100%" height="155%"> </a>
+</td>
+
+</tr>
+</table>
 
 </body>
 </html>
