--- a/Form.html
+++ b/Form.html
@@ -66,7 +66,7 @@ The One Piece is Shrek all along..
 <td align="left" width="50%" bgcolor="lightblue">
 <font size="5">
 
-<form action="r.html" method="post">
+<form action="mailto:leonardobrylleadrian@gmail.com" method="post">
   Username: <input name="textbox1" type="text"><br><br>
 
   I had feelings of ______ during ICT<br>
