--- a/l.html
+++ b/l.html
@@ -53,19 +53,19 @@
 </tr>
 <tr>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L1.pdf" target="_blank"> <img src="luffy.jpg" alt="Lesson 1 ppt" width="100%" height="155%"> </a>
+<a href="Q1L1.pdf" target="_blank"> <img src="luffy.jpg" alt="Lesson 1 ppt" width="100%" height="155%"> </a>
 </td>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L2.pdf" target="_blank"> <img src="zoro.jpg" alt="lesson 2 ppt" width="100%" height="155%"> </a>
+<a href="Q1L2.pdf" target="_blank"> <img src="zoro.jpg" alt="lesson 2 ppt" width="100%" height="155%"> </a>
 </td>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L3.pdf" target="_blank"> <img src="usopp.jpg" alt="Lesson 3 ppt" width="100%" height="155%"> </a>
+<a href="Q1L3.pdf" target="_blank"> <img src="usopp.jpg" alt="Lesson 3 ppt" width="100%" height="155%"> </a>
 </td>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L4.pdf" target="_blank"> <img src="nami.jpg" alt="Lesson 4 ppt" width="100%" height="155%"> </a>
+<a href="Q1L4.pdf" target="_blank"> <img src="nami.jpg" alt="Lesson 4 ppt" width="100%" height="155%"> </a>
 </td>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1Lesson5.pdf" target="_blank"> <img src="sanji.jpg" alt="Lesson 5 ppt" width="100%" height="155%"> </a>
+<a href="Q1Lesson5.pdf" target="_blank"> <img src="sanji.jpg" alt="Lesson 5 ppt" width="100%" height="155%"> </a>
 </td>
 
 </tr>
@@ -77,16 +77,16 @@
 </tr>
 <tr>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L6.pdf" target="_blank"> <img src="chopper.png" alt="Lesson 6 ppt" width="100%" height="155%"> </a>
+<a href="Q1L6.pdf" target="_blank"> <img src="chopper.png" alt="Lesson 6 ppt" width="100%" height="155%"> </a>
 </td>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L7.pdf" target="_blank"> <img src="robin.jpg" alt="lesson 7 ppt" width="100%" height="155%"> </a>
+<a href="Q1L7.pdf" target="_blank"> <img src="robin.jpg" alt="lesson 7 ppt" width="100%" height="155%"> </a>
 </td>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L8.pdf" target="_blank"> <img src="brook.jpg" alt="Lesson 8 ppt" width="100%" height="155%"> </a>
+<a href="Q1L8.pdf" target="_blank"> <img src="brook.jpg" alt="Lesson 8 ppt" width="100%" height="155%"> </a>
 </td>
 <td align="center" width="20%" bgcolor="lightblue">
-<a href="file:///C:/Users/Brenda%20Roxette/Downloads/Q1L9.pdf" target="_blank"> <img src="franky.jpg" alt="Lesson 9 ppt" width="100%" height="155%"> </a>
+<a href="Q1L9.pdf" target="_blank"> <img src="franky.jpg" alt="Lesson 9 ppt" width="100%" height="155%"> </a>
 </td>
 </tr>
 </body>
